# django-app

./: .env  .gitignore  README.md  docker-compose.yaml  pyproject.toml
app/: entrypoint.sh
app/config/: settings.py  urls.py
app/ordertrack_app/: admin.py  apps.py  signals.py  tasks.py  urls.py
app/ordertrack_app/fixtures/: directories.json
app/ordertrack_app/forms/: confirmations.py  orders.py  uploadfile.py
app/ordertrack_app/migrations/: 0001_initial.py
app/ordertrack_app/models/: __init__.py  confirmations.py  directories.py  invoices.py  orders.py
app/ordertrack_app/templates/ordertrack_app/: .env.template  base.html  menu.html
app/ordertrack_app/tests/: conftest.py  test_forms.py  test_models.py  test_views.py
app/ordertrack_app/views/: confirmations.py  directories.py  invoices.py  orders.py  views.py
config/: settings.py  urls.py
docker-build/nginx/: Dockerfile
docker-build/ordertrack/: Dockerfile
nginx/: nginx.conf
ordertrack_app/: admin.py  apps.py  models.py  urls.py
ordertrack_app/forms/: confirmations.py  orders.py  uploadfile.py
ordertrack_app/management/commands/: generate_data.py
ordertrack_app/migrations/: 0001_initial.py  0002_alter_confirmation_options_alter_order_options.py  0003_alter_confirmationdelivery_unique_together.py  0004_alter_confirmationdelivery_delivery_date.py
ordertrack_app/models/: confirmations.py  directories.py  invoices.py  orders.py
ordertrack_app/templates/ordertrack_app/: base.html  index.html
ordertrack_app/views/: confirmations.py  directories.py  invoices.py  orders.py  views.py
(+19 files in other folders)
